test/ppx_irmin/deriver/errors/lib_invalid.ml
type t = unit [@@deriving irmin { lib = "foo" }] (* should be [Some "foo"] *)
