test/ppx_irmin/deriver/errors/lib_invalid.expected
File "lib_invalid.ml", line 1, characters 40-45:
Error: Could not process `lib' argument: must be either `Some "Lib"' or `None'
